--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -79,37 +79,35 @@ body {
   textarea {
     @apply resize-none;
   }
-}
 
-.custom-horizontal-scroll::-webkit-scrollbar {
-  height: 5px;
-}
+  .custom-horizontal-scroll::-webkit-scrollbar {
+    height: 5px;
+  }
 
-body::-webkit-scrollbar,
-textarea::-webkit-scrollbar,
-.custom-vertical-scroll::-webkit-scrollbar {
-  width: 5px;
-}
+  body::-webkit-scrollbar,
+  textarea::-webkit-scrollbar,
+  .custom-vertical-scroll::-webkit-scrollbar {
+    width: 5px;
+  }
 
-body::-webkit-scrollbar-track,
-textarea::-webkit-scrollbar-track,
-.custom-horizontal-scroll::-webkit-scrollbar-track,
-.custom-vertical-scroll::-webkit-scrollbar-track {
-  background-color: #f1f1f1;
-}
+  body::-webkit-scrollbar-track,
+  textarea::-webkit-scrollbar-track,
+  .custom-horizontal-scroll::-webkit-scrollbar-track,
+  .custom-vertical-scroll::-webkit-scrollbar-track {
+    @apply bg-[#f1f1f1];
+  }
 
-body::-webkit-scrollbar-thumb,
-textarea::-webkit-scrollbar-thumb,
-.custom-horizontal-scroll::-webkit-scrollbar-thumb,
-.custom-vertical-scroll::-webkit-scrollbar-thumb {
-  background-color: #888;
-  outline: none;
-  border-radius: 10px;
-}
+  body::-webkit-scrollbar-thumb,
+  textarea::-webkit-scrollbar-thumb,
+  .custom-horizontal-scroll::-webkit-scrollbar-thumb,
+  .custom-vertical-scroll::-webkit-scrollbar-thumb {
+    @apply bg-[#888] outline-none rounded-[10px];
+  }
 
-body::-webkit-scrollbar-thumb:hover,
-textarea::-webkit-scrollbar-thumb:hover,
-.custom-horizontal-scroll::-webkit-scrollbar-thumb:hover,
-.custom-vertical-scroll::-webkit-scrollbar-thumb:hover {
-  background-color: #555;
+  body::-webkit-scrollbar-thumb:hover,
+  textarea::-webkit-scrollbar-thumb:hover,
+  .custom-horizontal-scroll::-webkit-scrollbar-thumb:hover,
+  .custom-vertical-scroll::-webkit-scrollbar-thumb:hover {
+    @apply bg-[#555];
+  }
 }
