--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -111,3 +111,14 @@ body {
     @apply bg-[#555];
   }
 }
+
+
+
+@layer base {
+  * {
+    @apply border-border outline-ring/50;
+  }
+  body {
+    @apply bg-background text-foreground;
+  }
+}
