--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -112,8 +112,6 @@ body {
   }
 }
 
-
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -121,4 +119,41 @@ body {
   body {
     @apply bg-background text-foreground;
   }
+}
+
+.ProseMirror {
+  @apply text-foreground max-h-full overflow-y-auto;
+}
+.ProseMirror pre {
+  @apply bg-muted text-muted-foreground p-4 rounded-md font-mono;
+}
+.dark .ProseMirror pre {
+  @apply bg-gray-800;
+}
+
+.prose iframe,
+.ProseMirror iframe {
+  @apply w-full aspect-video;
+}
+
+.prose ul {
+  list-style-type: disc;
+  padding-left: 1.5em;
+}
+
+.prose ol {
+  list-style-type: decimal;
+  padding-left: 1.5em;
+}
+
+.prose ul li {
+  display: list-item;
+}
+
+.prose ol li {
+  display: list-item;
+}
+
+.prose ifrmae {
+  @apply aspect-video w-full;
 }
